# TopWords

./: CMakeLists.txt  ChartPage.qml  HomePage.qml  README.md  main.qml
src/: filereader.cpp  filereader.h  main.cpp  topcounter.cpp  topcounter.h  wordsmodel.cpp  wordsmodel.h
ui/: BarChart.qml  BarItem.qml  ChartPage.qml  FileSelectionItem.qml  HomePage.qml  LegendItem.qml  main.qml  qml.qrc  qtquickcontrols2.conf
